added minor changes to home template

--- a/main_page/templates/main_page/accomodation.html
+++ b/main_page/templates/main_page/accomodation.html
@@ -27,67 +27,88 @@
         <div class="row">
             <!-- Single Ticket Pricing Table -->
             <div class="col-12 col-lg-4">
-                <div class="single-ticket-pricing-table style-2 text-center mb-100 wow fadeInUp" data-wow-delay="300ms">
+                <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms">
                     <h6 class="ticket-plan">1 day stay</h6>
                     <!-- Ticket Icon -->
                     <div class="ticket-icon">
-                        <img src="{% static 'main_page/img/core-img/p3.png' %}" alt="">
+                        <img src="{% static 'main_page/img/core-img/p1.png' %}" alt="">
                     </div>
-                    <h2 class="ticket-price"><span>$</span>59</h2>
-                    <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
+                    <h2 class="ticket-price">
+                        <span>Rs</span>250</h2>
+                    <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i
+                            class="zmdi zmdi-long-arrow-right"></i>
+                    </a>
                     <!-- Ticket Pricing Table Details -->
                     <div class="ticket-pricing-table-details">
-                        <p><i class="zmdi zmdi-check"></i> One Day Conference Ticket</p>
-                        <p><i class="zmdi zmdi-check"></i> Coffee-break</p>
-                        <p><i class="zmdi zmdi-check"></i> Lunch and Networking</p>
-                        <p><i class="zmdi zmdi-check"></i> Keynote talk</p>
-                        <p><i class="zmdi zmdi-check"></i> Talk to the Editors Session</p>
+                        <p>
+                            <i class="zmdi zmdi-check"></i> One Day Room Ticket</p>
+                        <p>
+                            <i class="zmdi zmdi-check"></i> Breakfast</p>
+                        <p>
+                            <i class="zmdi zmdi-check"></i> Lunch and Dinner</p>
+                        <p>
+                            <i class="zmdi zmdi-check"></i> Free Internet Facilities</p>
+                        
                     </div>
                 </div>
             </div>
 
             <!-- Single Ticket Pricing Table -->
             <div class="col-12 col-md-6 col-lg-4">
-                <div class="single-ticket-pricing-table style-2 active text-center mb-100 wow fadeInUp" data-wow-delay="300ms">
-                    <h6 class="ticket-plan">Full pass</h6>
+                <div class="single-ticket-pricing-table active text-center mb-100 wow fadeInUp"
+                    data-wow-delay="300ms">
+                    <h6 class="ticket-plan">2 Day Stay</h6>
                     <!-- Ticket Icon -->
                     <div class="ticket-icon">
-                        <img src="{% static 'main_page/img/core-img/p3.png' %}" alt="">
+                        <img src="{% static 'main_page/img/core-img/p2.png' %}" alt="">
                     </div>
-                    <h2 class="ticket-price"><span>$</span>99</h2>
-                    <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
+                    <h2 class="ticket-price">
+                        <span>Rs</span>500</h2>
+                    <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i
+                            class="zmdi zmdi-long-arrow-right"></i>
+                    </a>
                     <!-- Ticket Pricing Table Details -->
                     <div class="ticket-pricing-table-details">
-                        <p><i class="zmdi zmdi-check"></i> One Day Conference Ticket</p>
-                        <p><i class="zmdi zmdi-check"></i> Coffee-break</p>
-                        <p><i class="zmdi zmdi-check"></i> Lunch and Networking</p>
-                        <p><i class="zmdi zmdi-check"></i> Keynote talk</p>
-                        <p><i class="zmdi zmdi-check"></i> Talk to the Editors Session</p>
+                        <p>
+                            <i class="zmdi zmdi-check"></i> Two Day Room Ticket</p>
+                        <p>
+                            <i class="zmdi zmdi-check"></i> Breakfast</p>
+                        <p>
+                            <i class="zmdi zmdi-check"></i> Lunch and Dinner</p>
+                        <p>
+                            <i class="zmdi zmdi-check"></i> Free Internet Facilities</p>
+                        
                     </div>
                 </div>
             </div>
 
-            <!-- Single Ticket Pricing Table -->
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="single-ticket-pricing-table style-2 text-center mb-100 wow fadeInUp" data-wow-delay="300ms">
-                    <h6 class="ticket-plan">Group pass</h6>
-                    <!-- Ticket Icon -->
-                    <div class="ticket-icon">
-                        <img src="{% static 'main_page/img/core-img/p3.png' %}" alt="">
-                    </div>
-                    <h2 class="ticket-price"><span>$</span>199</h2>
-                    <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
-                    <!-- Ticket Pricing Table Details -->
-                    <div class="ticket-pricing-table-details">
-                        <p><i class="zmdi zmdi-check"></i> One Day Conference Ticket</p>
-                        <p><i class="zmdi zmdi-check"></i> Coffee-break</p>
-                        <p><i class="zmdi zmdi-check"></i> Lunch and Networking</p>
-                        <p><i class="zmdi zmdi-check"></i> Keynote talk</p>
-                        <p><i class="zmdi zmdi-check"></i> Talk to the Editors Session</p>
-                    </div>
-                </div>
-            </div>
+      <!-- Single Ticket Pricing Table -->
+      <div class="col-12 col-md-6 col-lg-4">
+          <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms">
+              <h6 class="ticket-plan">3 Days Stay</h6>
+              <!-- Ticket Icon -->
+              <div class="ticket-icon">
+                  <img src="{% static 'main_page/img/core-img/p3.png' %}" alt="">
+              </div>
+              <h2 class="ticket-price"><span>Rs</span>600</h2>
+              <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
+              <!-- Ticket Pricing Table Details -->
+              <div class="ticket-pricing-table-details">
+                  <p><i class="zmdi zmdi-check"></i> Three Day  Ticket</p>
+                  <p><i class="zmdi zmdi-check"></i> Breakfast</p>
+                  <p><i class="zmdi zmdi-check"></i> Lunch and Dinner</p>
+                  <p><i class="zmdi zmdi-check"></i> Internet Facilities</p>
+                  
+              </div>
+          </div>
+      </div>
+      <div class="col-12">
+        <div class="more-speaker-btn text-center mt-20 mb-40 wow fadeInUp" data-wow-delay="300ms">
+            <a class="btn confer-btn-white" href="{% url 'main_page:accomodation' %}">View Full Details<i class="zmdi zmdi-long-arrow-right"></i></a>
         </div>
+    </div>
+      
+  </div>
     </div>
 </section>
 <!-- Our Ticket Pricing Table Area End -->
