--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -187,17 +187,41 @@
                         <div class="single-client-content">
                             <!-- Single client Text -->
                             <div class="single-client-text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+                                <p> I strongly believe that, our students have huge potential to become world leaders and SA team is working hard to ensure this happen !</p>
                                 <!-- Single client Thumb and info -->
                                 <div class="single-client-thumb-info d-flex align-items-center">
                                     <!-- Single client Thumb -->
                                     <div class="single-client-thumb">
-                                        <img src="{% static 'main_page/img/bg-img/15.jpg' %}" alt="">
+                                        <img src="{% static 'main_page/img/bg-img/deansa.png' %}" alt="">
                                     </div>
                                     <!-- Single client Info -->
                                     <div class="client-info">
-                                        <h6>Maria Hernandez</h6>
-                                        <p>UX Manager</p>
+                                        <h6>Dr. C C Reddy</h6>
+                                        <p>Dean Student Affairs</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Single client Icon -->
+                            <div class="client-icon">
+                                <i class="zmdi zmdi-quote"></i>
+                            </div>
+                        </div>
+  
+                        <!-- Single client Slider -->
+                        <div class="single-client-content">
+                            <!-- Single client Text -->
+                            <div class="single-client-text">
+                                <p>ADVITIYA is a place for dreamers,innovators and out of the box thinkers with various club here guided by enthusiastic people one can learn ,innovate , build and own the future.</p>
+                                <!-- Single client Thumb and info -->
+                                <div class="single-client-thumb-info d-flex align-items-center">
+                                    <!-- Single client Thumb -->
+                                    <div class="single-client-thumb">
+                                        <img src="{% static 'main_page/img/bg-img/gsecy.png' %}" alt="">
+                                    </div>
+                                    <!-- Single client Info -->
+                                    <div class="client-info">
+                                        <h6>Ashish Bedi</h6>
+                                        <p>Bost General Secretary</p>
                                     </div>
                                 </div>
                             </div>
@@ -216,36 +240,12 @@
                                 <div class="single-client-thumb-info d-flex align-items-center">
                                     <!-- Single client Thumb -->
                                     <div class="single-client-thumb">
-                                        <img src="{% static 'main_page/img/bg-img/16.jpg' %}" alt="">
+                                        <img src="{% static 'main_page/img/bg-img/faculty.png' %}" alt="">
                                     </div>
                                     <!-- Single client Info -->
                                     <div class="client-info">
-                                        <h6>Jacqueline Myers</h6>
-                                        <p>UX Manager</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Single client Icon -->
-                            <div class="client-icon">
-                                <i class="zmdi zmdi-quote"></i>
-                            </div>
-                        </div>
-  
-                        <!-- Single client Slider -->
-                        <div class="single-client-content">
-                            <!-- Single client Text -->
-                            <div class="single-client-text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
-                                <!-- Single client Thumb and info -->
-                                <div class="single-client-thumb-info d-flex align-items-center">
-                                    <!-- Single client Thumb -->
-                                    <div class="single-client-thumb">
-                                        <img src="{% static 'main_page/img/bg-img/15.jpg' %}" alt="">
-                                    </div>
-                                    <!-- Single client Info -->
-                                    <div class="client-info">
-                                        <h6>Maria Hernandez</h6>
-                                        <p>UX Manager</p>
+                                        <h6>Neeraj Goel</h6>
+                                        <p>Faculty Advisor</p>
                                     </div>
                                 </div>
                             </div>
@@ -290,8 +290,8 @@
                 <!-- Heading -->
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="300ms">
-                        <p>Choose a Ticket</p>
-                        <h4>Ticket Pricing</h4>
+                        <p>Choose a Accomodation</p>
+                        <h4>Accomodation Pricing</h4>
                     </div>
                 </div>
             </div>
@@ -300,28 +300,27 @@
                 <!-- Single Ticket Pricing Table -->
                 <div class="col-12 col-lg-4">
                     <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms">
-                        <h6 class="ticket-plan">1 day pass</h6>
+                        <h6 class="ticket-plan">1 day stay</h6>
                         <!-- Ticket Icon -->
                         <div class="ticket-icon">
                             <img src="{% static 'main_page/img/core-img/p1.png' %}" alt="">
                         </div>
                         <h2 class="ticket-price">
-                            <span>$</span>59</h2>
+                            <span>Rs</span>250</h2>
                         <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i
                                 class="zmdi zmdi-long-arrow-right"></i>
                         </a>
                         <!-- Ticket Pricing Table Details -->
                         <div class="ticket-pricing-table-details">
                             <p>
-                                <i class="zmdi zmdi-check"></i> One Day Conference Ticket</p>
+                                <i class="zmdi zmdi-check"></i> One Day Room Ticket</p>
                             <p>
-                                <i class="zmdi zmdi-check"></i> Coffee-break</p>
+                                <i class="zmdi zmdi-check"></i> Breakfast</p>
                             <p>
-                                <i class="zmdi zmdi-check"></i> Lunch and Networking</p>
+                                <i class="zmdi zmdi-check"></i> Lunch and Dinner</p>
                             <p>
-                                <i class="zmdi zmdi-check"></i> Keynote talk</p>
-                            <p>
-                                <i class="zmdi zmdi-check"></i> Talk to the Editors Session</p>
+                                <i class="zmdi zmdi-check"></i> Free Internet Facilities</p>
+                            
                         </div>
                     </div>
                 </div>
@@ -330,28 +329,27 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-ticket-pricing-table active text-center mb-100 wow fadeInUp"
                         data-wow-delay="300ms">
-                        <h6 class="ticket-plan">Full pass</h6>
+                        <h6 class="ticket-plan">2 Day Stay</h6>
                         <!-- Ticket Icon -->
                         <div class="ticket-icon">
                             <img src="{% static 'main_page/img/core-img/p2.png' %}" alt="">
                         </div>
                         <h2 class="ticket-price">
-                            <span>$</span>99</h2>
+                            <span>Rs</span>500</h2>
                         <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i
                                 class="zmdi zmdi-long-arrow-right"></i>
                         </a>
                         <!-- Ticket Pricing Table Details -->
                         <div class="ticket-pricing-table-details">
                             <p>
-                                <i class="zmdi zmdi-check"></i> One Day Conference Ticket</p>
+                                <i class="zmdi zmdi-check"></i> Two Day Room Ticket</p>
                             <p>
-                                <i class="zmdi zmdi-check"></i> Coffee-break</p>
+                                <i class="zmdi zmdi-check"></i> Breakfast</p>
                             <p>
-                                <i class="zmdi zmdi-check"></i> Lunch and Networking</p>
+                                <i class="zmdi zmdi-check"></i> Lunch and Dinner</p>
                             <p>
-                                <i class="zmdi zmdi-check"></i> Keynote talk</p>
-                            <p>
-                                <i class="zmdi zmdi-check"></i> Talk to the Editors Session</p>
+                                <i class="zmdi zmdi-check"></i> Free Internet Facilities</p>
+                            
                         </div>
                     </div>
                 </div>
@@ -359,20 +357,20 @@
           <!-- Single Ticket Pricing Table -->
           <div class="col-12 col-md-6 col-lg-4">
               <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms">
-                  <h6 class="ticket-plan">Group pass</h6>
+                  <h6 class="ticket-plan">3 Days Stay</h6>
                   <!-- Ticket Icon -->
                   <div class="ticket-icon">
                       <img src="{% static 'main_page/img/core-img/p3.png' %}" alt="">
                   </div>
-                  <h2 class="ticket-price"><span>$</span>199</h2>
+                  <h2 class="ticket-price"><span>Rs</span>600</h2>
                   <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
                   <!-- Ticket Pricing Table Details -->
                   <div class="ticket-pricing-table-details">
-                      <p><i class="zmdi zmdi-check"></i> One Day Conference Ticket</p>
-                      <p><i class="zmdi zmdi-check"></i> Coffee-break</p>
-                      <p><i class="zmdi zmdi-check"></i> Lunch and Networking</p>
-                      <p><i class="zmdi zmdi-check"></i> Keynote talk</p>
-                      <p><i class="zmdi zmdi-check"></i> Talk to the Editors Session</p>
+                      <p><i class="zmdi zmdi-check"></i> Three Day  Ticket</p>
+                      <p><i class="zmdi zmdi-check"></i> Breakfast</p>
+                      <p><i class="zmdi zmdi-check"></i> Lunch and Dinner</p>
+                      <p><i class="zmdi zmdi-check"></i> Internet Facilities</p>
+                      
                   </div>
               </div>
           </div>
