--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -307,7 +307,7 @@
                         </div>
                         <h2 class="ticket-price">
                             <span>Rs</span>250</h2>
-                        <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i
+                        <a href="{% url 'main_page:accomodation' %}" class="btn confer-btn w-100 mb-30">Get Tickets <i
                                 class="zmdi zmdi-long-arrow-right"></i>
                         </a>
                         <!-- Ticket Pricing Table Details -->
@@ -336,7 +336,7 @@
                         </div>
                         <h2 class="ticket-price">
                             <span>Rs</span>500</h2>
-                        <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i
+                        <a href="{% url 'main_page:accomodation' %}" class="btn confer-btn w-100 mb-30">Get Tickets <i
                                 class="zmdi zmdi-long-arrow-right"></i>
                         </a>
                         <!-- Ticket Pricing Table Details -->
@@ -363,7 +363,7 @@
                       <img src="{% static 'main_page/img/core-img/p3.png' %}" alt="">
                   </div>
                   <h2 class="ticket-price"><span>Rs</span>600</h2>
-                  <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
+                  <a href="{% url 'main_page:accomodation' %}" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
                   <!-- Ticket Pricing Table Details -->
                   <div class="ticket-pricing-table-details">
                       <p><i class="zmdi zmdi-check"></i> Three Day  Ticket</p>
