main_page template

--- a/main_page/templates/main_page/accomodation.html
+++ b/main_page/templates/main_page/accomodation.html
@@ -43,9 +43,8 @@
                         <p>
                             <i class="zmdi zmdi-check"></i> One Day Room Ticket</p>
                         <p>
-                            <i class="zmdi zmdi-check"></i> Breakfast</p>
-                        <p>
-                            <i class="zmdi zmdi-check"></i> Lunch and Dinner</p>
+                            <i class="zmdi zmdi-check"></i> One day Breakfast</p>
+    
                         <p>
                             <i class="zmdi zmdi-check"></i> Free Internet Facilities</p>
                         
@@ -60,7 +59,7 @@
                     <h6 class="ticket-plan">2 Day Stay</h6>
                     <!-- Ticket Icon -->
                     <div class="ticket-icon">
-                        <img src="{% static 'main_page/img/core-img/p2.png' %}" alt="">
+                        <img src="{% static 'main_page/img/core-img/p1.png' %}" alt="">
                     </div>
                     <h2 class="ticket-price">
                         <span>Rs</span>500</h2>
@@ -72,9 +71,8 @@
                         <p>
                             <i class="zmdi zmdi-check"></i> Two Day Room Ticket</p>
                         <p>
-                            <i class="zmdi zmdi-check"></i> Breakfast</p>
-                        <p>
-                            <i class="zmdi zmdi-check"></i> Lunch and Dinner</p>
+                            <i class="zmdi zmdi-check"></i> Two Day Breakfast</p>
+                        
                         <p>
                             <i class="zmdi zmdi-check"></i> Free Internet Facilities</p>
                         
@@ -88,15 +86,15 @@
               <h6 class="ticket-plan">3 Days Stay</h6>
               <!-- Ticket Icon -->
               <div class="ticket-icon">
-                  <img src="{% static 'main_page/img/core-img/p3.png' %}" alt="">
+                  <img src="{% static 'main_page/img/core-img/p1.png' %}" alt="">
               </div>
               <h2 class="ticket-price"><span>Rs</span>600</h2>
               <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
               <!-- Ticket Pricing Table Details -->
               <div class="ticket-pricing-table-details">
                   <p><i class="zmdi zmdi-check"></i> Three Day  Ticket</p>
-                  <p><i class="zmdi zmdi-check"></i> Breakfast</p>
-                  <p><i class="zmdi zmdi-check"></i> Lunch and Dinner</p>
+                  <p><i class="zmdi zmdi-check"></i> Three day Breakfast</p>
+                  
                   <p><i class="zmdi zmdi-check"></i> Internet Facilities</p>
                   
               </div>
