--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -17,7 +17,7 @@
     <title>{% block title %} Advitiya{%endblock%} </title>
 </head>
 
-<body>
+<body style="margin: 0;">
     <header class="header-area">
         <div class="classy-nav-container breakpoint-off">
             <div class="container">
@@ -43,7 +43,7 @@
                         <div class="classynav">
                             <ul id="nav">
                                 <li><a href="{% url 'main_page:index' %}">Home</a></li>
-                                <li><a href="#">Pages</a>
+                                <li><a href="{% url 'TSP:home' %}">TSP</a>
                                 </li>
                                 <li><a href="#">Team</a></li>
                                 <li><a href="{% url 'main_page:events'%}">Events</a>
@@ -116,8 +116,8 @@
                             <h5 class="widget-title">Location</h5>
                     <p>Indian Institute of Technology Ropar, Bara Phool, Birla Seed Farms, Rupnagar,Punjab, INDIA 140001
                     </p>
-                    <p ><i class="fa fa-phone mr-3"></i>+91 9690911442</p>
-                    <p><i class="fa fa-envelope-o mr-3"></i>advitiya.pr@iitrpr.ac.in</p>
+                    <p ><i class="fa fa-phone mr-3"></i>+91 8619174962</p>
+                    <p><i class="fa fa-envelope-o mr-3"></i>advitiya@iitrpr.ac.in</p>
                         </div>
                     </div>
 
@@ -129,10 +129,10 @@
 
                             <!-- Footer Nav -->
                             <ul class="footer-nav">
-                                <li><a href="#">OSHA Compliance</a></li>
-                                <li><a href="#">Microsoft Excel Basics</a></li>
+                                <li><a href="#">Opening Soon</a></li>
+                                <!-- <li><a href="#">Microsoft Excel Basics</a></li>
                                 <li><a href="#">Forum Speaker Series</a></li>
-                                <li><a href="#">Tedx Moscow Conference</a></li>
+                                <li><a href="#">Tedx Moscow Conference</a></li> -->
                             </ul>
                         </div>
                     </div>
