--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -67,10 +67,10 @@
 
                             <!-- Signing in -->
                             {% if not user.is_authenticated %}
-                            <a href="{% provider_login_url 'google' %}" class="vcenter"><img
+                            <a href="{% provider_login_url 'google' %}?next={% url 'main_page:index' %}" class="vcenter"><img
                                     src="{% static 'ca/img/gsignin.png' %}" class='gsignin-btn' height="50px" width="50px" alt="" srcset=""></a>
                             {% else %}
-                            <a href="{% url 'ca:account_logout' %}" class="btn btn-secondary" style="margin-bottom: 3px;"><i 
+                            <a href="{% url 'main_page:account_logout' %}?next={% url 'main_page:index' %}" class="btn btn-secondary" style="margin-bottom: 3px;"><i 
                                 class="fas fa-sign-out-alt"></i>SIGN OUT</a>
 
                             {% endif %}
